--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,11 @@
   <section class="container-fluid" id="register">
     <div class="row justify-content-center mt-5">
       <div class="col">
-        <h1>Register</h1>
+        <div class="row">
+          <div class="col masuk">Register</div>
+          <div class="col login-click" onclick="showLogin()" >Back to Login</div>
+        </div>
+        
         <form onsubmit="register(event)">
           <div class="form-group">
             <label form="name">Email</label>
