--- a/client/index.html
+++ b/client/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="col-3">
           <div class="item inprogress">
-            In Progress
+            Todo
             <div class="card" style="margin-top: 10px; border-radius: 10px;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -117,7 +117,7 @@
         </div>
         <div class="col-3">
           <div class="item done">
-            Done
+            Doing
             <div class="card" style="margin-top: 10px; border-radius: 10px;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -132,7 +132,7 @@
         </div>
         <div class="col-3">
           <div class="item comment">
-            Comment
+            Done
             <div class="card" style="margin-top: 10px; border-radius: 10px;">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
