--- a/client/index.html
+++ b/client/index.html
@@ -10,82 +10,85 @@
   <title>KanBar - Kanban Akbar</title>
 </head>
 <body style="background-image: url(./img/body-bg.jpg); height: 100%;">
-
-  <!-- LOGIN PAGE -->
-  <section id="login-page" class="container al-cnt">
-    <div class="d-flex justify-content-center" style="margin: 64px;">
-      <div class="bg-custom-tp px-5" style="border-radius: 5px;">
-        <form class="form-signin text-center mt-4" onsubmit="signIn(event)">
-          <img class="mb-4" src="./img/logo.png" alt="Logo" width="72" height="72">
-          <h1 class="h3 mb-3 font-weight-normal">Login to KanBar</h1>
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <label for="inputPassword" class="sr-only">Password</label>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
-          <div class="mt-2">
-            <div class="g-signin2" data-width="300" data-longtitle="true" data-onsuccess="onSignIn"></div>
-          </div>
-          <div class="mt-1">
-            <a href="#" onclick="signupPage()">Don't have any account? Register here!</a>
-          </div>
-          <p id="login-err-msg"></p>
-          <p class="mt-5 text-muted">&copy; RizkyAkhid</p>
-        </form> 
-      </div>
-    </div>
-  </section>
-
-  <!-- REGISTRATION PAGE -->
-  <!-- <section id="signup-page" class="container al-cnt">
-    <div class="d-flex justify-content-center" style="margin: 28px;">
-      <div class="bg-custom-tp px-5" style="border-radius: 5px;" style="width: 400px;">
-        <form onsubmit="signUp(event)" class="container mt-4">
-          <div class="container text-center">
+  <div id="app">
+    <!-- LOGIN PAGE -->
+    <section id="login-page" class="container al-cnt" v-if="page == 'login-page'">
+      <div class="d-flex justify-content-center" style="margin: 64px;">
+        <div class="bg-custom-tp px-5" style="border-radius: 5px;">
+          <form class="form-signin text-center mt-4" onsubmit="">
             <img class="mb-4" src="./img/logo.png" alt="Logo" width="72" height="72">
-            <h1 class="h3 mb-3 font-weight-normal">Registration Form</h1>
-          </div>
-          <div class="form-group">
-            <label for="inputName">Full Name</label>
-            <input type="text" class="form-control" id="regName" placeholder="e.g. David Ornestein">
-          </div>
-          <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="regEmail" placeholder="e.g. ornestein@mail.us">
-          </div>
-          <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="regPassword" placeholder="Type your password">
-          </div>
-          <p id="reg-err-msg"></p>
-          <button type="submit" class="btn btn-primary btn-block">Register</button>
-          <div class="mt-1 text-center">
-            <a href="" onclick="signinPage(event)">Back to sign in page</a>
-          </div>
-          <p class="mt-5 mb-3 text-center text-muted">&copy; RizkyAkhid</p>
-        </form>
+            <h1 class="h3 mb-3 font-weight-normal">Login to KanBar</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+            <div class="mt-2">
+              <div class="g-signin2" data-width="300" data-longtitle="true" data-onsuccess="onSignIn"></div>
+            </div>
+            <div class="mt-1">
+              <a href="#" @click.prevent="page = 'register-page'">Don't have any account? Register here!</a>
+            </div>
+            <p id="login-err-msg"></p>
+            <p class="mt-5 text-muted">&copy; RizkyAkhid</p>
+          </form> 
+        </div>
       </div>
-    </div>
-  </section> -->
-
-  <!-- HOMEPAGE -->
-  <!-- <section id="homepage">
-    <nav class="navbar navbar-expand-lg navbar-light bg-custom-tp">
-      <a class="navbar-brand" href="#">KanBar</a>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit" onclick="signOut(event)">Sign out</button>
-        </form>
+    </section>
+  
+    <!-- REGISTRATION PAGE -->
+    <section id="register-page" class="container al-cnt" v-else-if="page == 'register-page'">
+      <div class="d-flex justify-content-center" style="margin: 28px;">
+        <div class="bg-custom-tp px-5" style="border-radius: 5px;" style="width: 400px;">
+          <form onsubmit="" class="container mt-4">
+            <div class="container text-center">
+              <img class="mb-4" src="./img/logo.png" alt="Logo" width="72" height="72">
+              <h1 class="h3 mb-3 font-weight-normal">Registration Form</h1>
+            </div>
+            <div class="form-group">
+              <label for="inputName">Full Name</label>
+              <input type="text" class="form-control" id="regName" placeholder="e.g. David Ornestein">
+            </div>
+            <div class="form-group">
+              <label for="inputEmail">Email</label>
+              <input type="email" class="form-control" id="regEmail" placeholder="e.g. ornestein@mail.us">
+            </div>
+            <div class="form-group">
+              <label for="inputPassword">Password</label>
+              <input type="password" class="form-control" id="regPassword" placeholder="Type your password">
+            </div>
+            <p id="reg-err-msg"></p>
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
+            <div class="mt-1 text-center">
+              <a href="" @click.prevent="page = 'login-page'">Back to login page</a>
+            </div>
+            <p class="mt-5 mb-3 text-center text-muted">&copy; RizkyAkhid</p>
+          </form>
+        </div>
       </div>
-    </nav>
-  </section> -->
+    </section>
+  
+    <!-- HOMEPAGE -->
+    <section id="homepage" v-else-if="page == 'homepage'">
+      <nav class="navbar navbar-expand-lg navbar-light bg-custom-tp">
+        <a class="navbar-brand" href="#">KanBar</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Sign out</button>
+          </form>
+        </div>
+      </nav>
+    </section>
+  </div>
 
   <!-- Icons made by <a href="https://roundicons.com/" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a> -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
