--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
 
     <div class="" id="app">
 
-    <nav v-if="page !== 'login-page' && page !== 'register-page'" class="navbar navbar-expand-lg navbar-light bg-transparent" >
+    <nav v-if="page !== 'login-page' && page !== 'register-page'" class="navbar navbar-expand-lg navbar-light bg-transparent border-bottom" >
         <div class="container">
         <a class="navbar-brand" href="">Kanban</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,11 +47,11 @@
     <div class="container">
         <!-- Login Page -->
         <section v-if="page == 'login-page'" class="login-page mt-5" id="login-page">
-            <div class="row justify-content-center">
+            <div class="row mx-auto">
                 <div class="col-12">
-                    <div class="card">
+                    <div class="card" id="card-login-page">
                         <div class="card-body text-center">
-                            <h3 class="card-text">Sign In</h3>
+                            <h3 class="card-text">SIGN IN</h3>
                             <form @submit.prevent="login" class="">
                                 <div class="form-group mt-5">
                                     <input v-model="userLogin.email"  type="email" class="form-control mx-auto" id="email" aria-describedby="emailHelp" placeholder="email address">
@@ -75,7 +75,7 @@
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body text-center">
-                            <h3 class="card-text">Sign Up</h3>
+                            <h3 class="card-text">SIGN UP</h3>
                             <form @submit.prevent="register" class="">
                                 <div class="form-group mt-5">
                                     <input v-model="userRegister.firstName" type="text" class="form-control mx-auto" id="first_name" placeholder="first name">
@@ -111,12 +111,12 @@
                                 </div>
                                 <transition name="fade">  
                                     <div v-show="show" class="mt-3" id="form-add-task">
-                                        <button @click="show = !show" style="border-radius: 50%;" class="btn"><i class="far fa-window-close"></i></button>
                                         <form @submit.prevent="addTask" action="" class="mt-3">
                                             <div class="form-group">
                                                 <input v-model="taskAdd.title" placeholder="title" type="text" style="width: 100%;" class="form-control">
                                             </div>
                                             <button type="submit" style="border-radius: 50%;" class="btn"><i class="fas fa-save"></i></button>
+                                            <button type="reset" @click="show = !show" style="border-radius: 50%;" class="btn"><i class="far fa-window-close"></i></button>
                                         </form>
                                     </div>
                                 </transition>
@@ -130,7 +130,7 @@
                                     <div class="card-footer border-0 bg-light">
                                         <a href="" class="card-link text-success"><i class="fas fa-edit"></i></a>
                                         <a href="" class="card-link text-danger"><i class="fas fa-trash-alt"></i></a>
-                                        <a href="" class="card-link text-info"><i class="fas fa-arrow-right"></i></a>
+                                        <a @click="changeCategory('product', task.id)" href="" class="card-link text-info"><i class="fas fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -147,9 +147,10 @@
                                       <h5 class="card-title">{{task.title}}</h5>
                                       <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> Haris Pratama</p>
                                     </div>
-                                    <div class="card-footer bg-light">
-                                        <a href="" class="card-link">Edit</a>
-                                        <a href="" class="card-link">Delete</a>
+                                    <div class="card-footer border-0 bg-light">
+                                        <a href="" class="card-link text-success"><i class="fas fa-edit"></i></a>
+                                        <a href="" class="card-link text-danger"><i class="fas fa-trash-alt"></i></a>
+                                        <a @click="changeCategory('development', task.id)" href="" class="card-link text-info"><i class="fas fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -166,9 +167,10 @@
                                       <h5 class="card-title">{{task.title}}</h5>
                                       <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> Haris Pratama</p>
                                     </div>
-                                    <div class="card-footer bg-light">
-                                        <a href="" class="card-link">Edit</a>
-                                        <a href="" class="card-link">Delete</a>
+                                    <div class="card-footer border-0 bg-light">
+                                        <a href="" class="card-link text-success"><i class="fas fa-edit"></i></a>
+                                        <a href="" class="card-link text-danger"><i class="fas fa-trash-alt"></i></a>
+                                        <a @click="changeCategory('done', task.id)" href="" class="card-link text-info"><i class="fas fa-arrow-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -185,9 +187,9 @@
                                       <h5 class="card-title">{{task.title}}</h5>
                                       <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> Haris Pratama</p>
                                     </div>
-                                    <div class="card-footer bg-light">
-                                        <a href="" class="card-link">Edit</a>
-                                        <a href="" class="card-link">Delete</a>
+                                    <div class="card-footer border-0 bg-light">
+                                        <a href="" class="card-link text-success"><i class="fas fa-edit"></i></a>
+                                        <a href="" class="card-link text-danger"><i class="fas fa-trash-alt"></i></a>
                                     </div>
                                 </div>
                             </div>
