--- a/client/index.html
+++ b/client/index.html
@@ -124,12 +124,25 @@
                             <div class="card-body" id="card-tasks">
                                 <div v-for="task in tasks" :key="task.id" v-show="task.category == 'backlog'" class="card border-0">
                                     <div class="card-body bg-white mt-3">
-                                      <h5 class="card-title">{{task.title}}</h5>
+                                        <transition name="fade">  
+                                            <div v-show="getTaskById.title != ''" class="mt-3" id="form-edit-task">
+                                                <form @submit.prevent="editTitleTask(task.id)" action="" class="mt-3">
+                                                    <div class="form-group">
+                                                        <input v-model="getTaskById.title" placeholder="title" type="text" style="width: 100%;" class="form-control">
+                                                    </div>
+                                                    <button type="submit" style="border-radius: 50%;" class="btn"><i class="fas fa-save"></i></button>
+                                                    <button type="reset" @click="getTaskById.title = !getTaskById.title" style="border-radius: 50%;" class="btn"><i class="far fa-window-close"></i></button>
+                                                </form>
+                                            </div>
+                                        </transition>
+                                        <div v-show="getTaskById.title == ''" class="">
+                                            <h5 class="card-title">{{task.title}}</h5>
+                                        </div>
                                       <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> {{task.User.firstName}} {{task.User.lastName}}</p>
                                     </div>
                                     <div class="card-footer border-0 bg-light">
-                                        <a href="" class="card-link text-success"><i class="fas fa-edit"></i></a>
-                                        <a href="" class="card-link text-danger"><i class="fas fa-trash-alt"></i></a>
+                                        <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
+                                        <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
                                         <a @click="changeCategory('product', task.id)" href="" class="card-link text-info"><i class="fas fa-arrow-right"></i></a>
                                     </div>
                                 </div>
@@ -204,6 +217,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/script.js"></script>
