update: client, kurang delete, login, dan register, OAuth

--- a/client/index.html
+++ b/client/index.html
@@ -4,158 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
+  crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
   
   <title>Kanban!</title>
 </head>
 <body>
-  <div id="app">
-    <div>
-      <nav class="navbar">
-        <div>Kanban by Bimo</div>
-        <div class="icons">
-          <button type="button" class="btn btn-primary">Add task</button>
-          <button type="button" class="btn btn-danger">Logout</button>
-        </div>
-      </nav>
-    </div> 
-
-
-  
-    <!-- Landing Page -->
-    <section class="container-fluid" id="landing">
-      <!-- <h1 v-text="msg"></h1> -->
-      <div class="row justify-content-center mt-5">
-        <div class="col">
-          <div class="row">
-            <div class="col masuk">Masuk</div>
-            <div class="col register-click" onclick="showRegister()" >Daftar</div>
-          </div>
-          
-          <form onsubmit="login(event)">
-            <div class="form-group">
-              <label for="login-email">Email</label>
-              <input type="email" id="login-email" class="form-control" >
-            </div>
-            <div class="form-group">
-              <label for="login-password">Password</label>
-              <input type="password" id="login-password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
-        </div>
-      </div>
-    </section>
-
-  
-  
-    <!-- Register Page -->
-    <section class="container-fluid" id="register">
-      <div class="row justify-content-center mt-5">
-        <div class="col">
-          <div class="row">
-            <div class="col masuk">Register</div>
-            <div class="col login-click" onclick="showLogin()" >Back to Login</div>
-          </div>
-          
-          <form onsubmit="register(event)">
-            <div class="form-group">
-              <label form="name">Email</label>
-              <input type="email" id="req-email" class="form-control" placeholder="input your email" autocomplete="email">
-            </div>
-            <div class="form-group">
-              <label form="password">Password</label>
-              <input type="password" id="req-password" class="form-control" placeholder="input your password" autocomplete="current-password">
-            </div>
-            <button class="btn btn-dark" type="submit">Register</button>
-            <div class="justify-content-center">
-            </div>
-          </form>
-        </div>
-      </div>
-    </section>
-  
-  
-    <!-- Main Page -->
-    <div>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-3">
-            <div class="item planning">
-              Backlog
-              <div class="card" style="margin-top: 10px; border-radius: 10px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-                  <a href="#" class="card-link">Move</a>
-                </div>
-              </div>
-              <div class="card" style="margin-top: 10px; border-radius: 10px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-                  <a href="#" class="card-link">Move</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item inprogress">
-              Todo
-              <div class="card" style="margin-top: 10px; border-radius: 10px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-                  <a href="#" class="card-link">Move</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item done">
-              Doing
-              <div class="card" style="margin-top: 10px; border-radius: 10px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-                  <a href="#" class="card-link">Move</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="item comment">
-              Done
-              <div class="card" style="margin-top: 10px; border-radius: 10px;">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="card-link">Edit</a>
-                  <a href="#" class="card-link">Delete</a>
-                  <a href="#" class="card-link">Move</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> 
+  <div id="app"> 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-  <script src="./main.js"></script>
+  <script src="./src/main.js"></script>
 </body>
 </html>
